# mprpc

./: README.md
mprpc/: CMakeLists.txt
mprpc/example/: user.proto
mprpc/example/callee/: userservice.cpp
mprpc/example/caller/: calluserservice.cpp
mprpc/log/: 2024-4-22-log.txt  2024-4-23-log.txt
mprpc/src/: logger..cpp  mprpcapplication.cpp  mprpcchannel.cpp  mprpcconfig.cpp  mprpccontroller.cpp  rpcheader.proto  rpcprovider.cpp  zookeeperutil.cpp
mprpc/src/include/: lockqueue.h  logger.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  mprpccontroller.h  rpcprovider.h
mprpc/test/testProtobuf/: test.cpp  test.pb.cc  test.pb.h  test.proto
